kubernetes/apps/base/cognee/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app.kubernetes.io/component: database
    app.kubernetes.io/instance: cognee-cluster
    app.kubernetes.io/name: postgresql
    app.kubernetes.io/managed-by: cloudnative-pg
    cnpg.io/cluster: cognee-cluster
  name: cognee-cluster-status
  namespace: cognee
spec:
  type: ClusterIP
  ports:
    - name: status
      port: 443
      protocol: TCP
      targetPort: status
  selector:
    cnpg.io/cluster: cognee-cluster
    cnpg.io/podRole: instance
